# ws_medical_private_record

./: Anchor.toml  README.md
encrypted-ixs/src/: lib.rs
programs/ws_medical_private_record/: Cargo.toml
programs/ws_medical_private_record/src/: lib.rs
tests/: ws_medical_private_record.ts
